--- a/style.css
+++ b/style.css
@@ -17,9 +17,17 @@
 }
 
 .beige{ /*alternate square colors*/
-  background-color: rgb(238, 238, 210);
+  background-color: rgb(238,238,210);
 }
 
 .green{ /*alternate square colors*/
   background-color: rgb(118, 150, 86);
+}
+
+.black{ /*pieces colors*/
+  fill: black; /*for changing colors of svg elements in css we use fill*/
+}
+
+.brown{ /*pieces colors*/
+  fill: rgb(107, 69, 38); /*for changing colors of svg elements in css we use fill*/
 }
